Thu Jul 10 01:09:57 2014  Koichi Sasada  <ko1@atdot.net>

	* symbol.c: remove rb_gc_mark_symbols().

	  fstrings referred by static symbols and pinned dynamic symbols
	  are registered by rb_gc_register_mark_object().

	  fstring referred by dynamic symbols (not pinned symbols)
	  are referred from global_symbols.dsymbol_fstr_hash (Hash object).

	  Note that fstrings referred from dynamic symbols must live logger
	  than symbol objects themselves because rb_gc_free_dsymbol() uses
	  fstring to remove from symbol tables.
	  This is why we can not mark fstrings from dynamic symbols.

	  This technique reduces root objects for GC marking.

	* gc.c (gc_mark_roots): ditto.

	* internal.h: ditto.

Thu Jul 10 00:24:18 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* common.mk (DTRACE_DEPENDENT_OBJS): fix build failure on Solaris
	  introduced in r46768. Object files containing dtrace probes should
	  be listed in DTRACE_DEPENDENT_OBJS.

Wed Jul  9 17:07:28 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.c, symbol.h: Symbol class implementation and internals,
	  split from parse.y.

Wed Jul  9 14:45:39 2014  Koichi Sasada  <ko1@atdot.net>

	* parse.y: change Symbol <-> ID relationship to avoid
	  exposing IDs from collectable symbols.
	  [Bug #10014]

	  Now, rb_check_id() returns 0 if corresponding symbol is
	  pinned dynamic symbol.

	  There is remaining intern_cstr_without_pindown(), it can return
	  IDs from collectable symbols. We must be careful to use it
	  (only used in parse.y).  I think it should be removed if
	  it does not have impact for performance.

	* parse.y:
	  add:
	  * STATIC_SYM2ID()
	  * STATIC_ID2SYM()
	  rename:
	  * rb_pin_dynamic_symbol() -> dsymbol_pindown()

	* internal.h:
	  remove:
	  * rb_check_id_without_pindown()
	  * rb_sym2id_without_pindown()
	  add:
	  * rb_check_symbol()
	  * rb_check_symbol_cstr()

	* load.c: use rb_check_id() or rb_check_id_cstr().

	* object.c: ditto.

	* struct.c: ditto.

	* thread.c: ditto.
